<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewExpression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="0"
        android:padding="8dp"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPercent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/ACButtonStyle"
        android:text="AC"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonParentheses"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="()"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonPercent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonPercent"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="%"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="/"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25" />


    <Button
        android:id="@+id/button7"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button8"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button9"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintWidth_percent="0.25" />


    <Button
        android:id="@+id/buttonMultiply"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="*"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button4"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button5"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button6"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonSubtract"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button1"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button2"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button3"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonAdd"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button0"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonDot"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="⌫"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/buttonEqual"
        style="@style/FunctionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="="
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dark Mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>